--- a/package.json
+++ b/package.json
@@ -59,12 +59,13 @@
     "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
     "mipd": "^0.0.7",
-    "next": "^15",
+    "next": "^16.0.7",
     "react": "^19",
     "react-dom": "^19",
     "siwe": "^3.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vercel": "^49.1.1",
     "viem": "^2.23.6",
     "wagmi": "^2.14.12",
     "zod": "^3.24.2"
